tests/NormalTests/paczka1/small_fuzzy/32816182.err
Error in line 1: S297 S782 22,6
Error in line 2: j5Gkpdcz S451 71,5
Error in line 5: j5Gkpdcz S782 79,1
Error in line 3: S297 S451 11,8
Error in line 14: RI0D4B S451 6,1
